change public bool to visibility
